styles.css
html {
    background-color: #ebe6e6;
    box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

h1 {
    font-family: "Tahoma", "Verdana", sans-serif;
    color: #c2992b;
    font-size: 42px;
}

h2 {
    font-family: "Tahoma", "Verdana", sans-serif;
    color: #c2992b;
    text-decoration: underline;
}

h3 {
    font-family: "Tahoma", "Verdana", sans-serif;
    color: #302f2f;
}

img {
    vertical-align: top;
    width: 600px;
    margin: 0 auto;
    display: block;
}

body {
    text-align: center;
    font-family: "Georgia", "Garamond", serif;
}

a {
    font-family: "Tahoma", "Verdana", sans-serif;
    color: #8c887d;
}

a:hover {
    color: #5c5952;
    font-weight: bold;
}

div.container-text {
    display: inline-block;
    width: 600px;
    margin: 0 auto;
}

ul.main-list{
    display: block;
    text-align: center;
    list-style-type: none;
}

ul.ingredients {
    display: block;    
    text-align: left;
    list-style-type:circle;
}

.stepbystep {
    display: inline-block;
    text-align: left;
}

